chore(ui): add more max width to hero title

--- a/src/components/idiomas/uk/hero.astro
+++ b/src/components/idiomas/uk/hero.astro
@@ -21,7 +21,7 @@ import { Icon } from "astro-icon/components";
       class="flex flex-col items-center justify-center space-y-4 text-center"
     >
       <h1
-        class="animate-blurred-fade-in text-heading-1 max-w-4xl gap-1 leading-none font-black text-white"
+        class="animate-blurred-fade-in text-heading-1 max-w-4xl gap-1 leading-none font-black text-white 2xl:max-w-7xl"
       >
         Estudia inglés en el Reino Unido y lleva tu aprendizaje al <b
           class="text-cteal-100 brightness-200">siguiente nivel.</b
