--- a/src/components/higher-education/bento.astro
+++ b/src/components/higher-education/bento.astro
@@ -1,5 +1,5 @@
 ---
-import Globe from "./globe.astro";
+import Globe from "@/components/globe.astro";
 ---
 
 <section class="container py-12 md:py-24" id="bento">
