feat(uk): add new section

--- a/src/pages/idiomas/reino-unido.astro
+++ b/src/pages/idiomas/reino-unido.astro
@@ -3,7 +3,8 @@ import Layout from "@/layouts/Layout.astro";
 import Hero from "@/components/idiomas/uk/hero.astro";
 import ScrollDrivenAnimation from "@/components/idiomas/uk/scroll-driven-animation.astro";
 import Cities from "@/components/idiomas/uk/cities.astro";
-// import Testimonials from "@/components/home/testimonials.astro";
+import Plans from "@/components/idiomas/uk/plans.astro";
+import Bento from "@/components/idiomas/uk/bento.astro";
 ---
 
 <Layout
@@ -13,5 +14,6 @@ import Cities from "@/components/idiomas/uk/cities.astro";
   <Hero />
   <ScrollDrivenAnimation />
   <Cities />
-  <!-- <Testimonials /> -->
+  <Plans />
+  <Bento />
 </Layout>
