feat(uk): add partners section

--- a/src/pages/idiomas/reino-unido.astro
+++ b/src/pages/idiomas/reino-unido.astro
@@ -5,6 +5,7 @@ import ScrollDrivenAnimation from "@/components/idiomas/uk/scroll-driven-animati
 import Cities from "@/components/idiomas/uk/cities.astro";
 import Plans from "@/components/idiomas/uk/plans.astro";
 import Bento from "@/components/idiomas/uk/bento.astro";
+import Partners from "@/components/idiomas/uk/partners.astro";
 ---
 
 <Layout
@@ -16,4 +17,5 @@ import Bento from "@/components/idiomas/uk/bento.astro";
   <Cities />
   <Plans />
   <Bento />
+  <Partners />
 </Layout>
