--- a/src/components/idiomas/uk/scroll-driven-animation.astro
+++ b/src/components/idiomas/uk/scroll-driven-animation.astro
@@ -5,7 +5,7 @@
       class="sticky top-0 z-10 flex h-screen flex-col items-center justify-center px-2"
     >
       <h2
-        class="mx-auto text-center text-4xl leading-none font-black text-balance opacity-15 md:text-6xl lg:text-6xl xl:text-7xl 2xl:text-9xl"
+        class="mx-auto text-center text-4xl leading-none font-black text-balance opacity-15 md:text-6xl lg:text-5xl xl:text-7xl"
         id="headline"
       >
         God Save the Queen!
