refactor(uk): add anchor link to section

--- a/src/components/idiomas/uk/plans.astro
+++ b/src/components/idiomas/uk/plans.astro
@@ -63,7 +63,7 @@ const PLANS: Plan[] = [
 
 <section
   class="relative grid place-items-center bg-gray-50 py-12 md:py-24"
-  id="pricing"
+  id="plans"
 >
   <div class="container flex flex-col gap-4 sm:gap-6 lg:gap-20">
     <header
