--- a/src/components/idiomas/uk/hero.astro
+++ b/src/components/idiomas/uk/hero.astro
@@ -40,9 +40,7 @@ import { Icon } from "astro-icon/components";
       </p>
 
       <a
-        href="https://api.whatsapp.com/send?phone=573183795288&text=%C2%A1Hola!%20%C2%BFC%C3%B3mo%20est%C3%A1s%3F%20%F0%9F%98%84"
-        rel="noopener noreferrer"
-        target="_blank"
+        href="#plans"
         class="bg-cpurple-200 hover:bg-cpurple-300 animate-blurred-fade-in animate-delay-150 mx-auto mt-5 mb-10 inline-block w-fit px-8 py-3 text-sm font-semibold text-white transition min-sm:text-base"
       >
         Descubre programas en Reino Unido
