style(logos): reduce height to same of footer logos

--- a/src/components/idiomas/uk/partners.astro
+++ b/src/components/idiomas/uk/partners.astro
@@ -14,22 +14,26 @@ import StaffordHouseLogo from "@/icons/logos/staffordhouse.svg";
       <img
         src="/images/logos/kingseducation.png"
         alt="Kings Education Logo"
-        height="40"
-        class="h-12 w-auto md:h-16"
+        width={80}
+        height={30}
+        class="h-7 w-auto"
       />
     </li>
     <li>
       <img
         src="/images/logos/stgiles-international.png"
         alt="St Giles International Logo"
-        height="40"
-        class="h-12 w-auto md:h-16"
+        width={80}
+        height={30}
+        class="h-7 w-auto"
       />
     </li>
     <li>
       <StaffordHouseLogo
         aria-label="Stafford House Logo"
-        class="h-12 w-auto md:h-16"
+        width={80}
+        height={30}
+        class="h-7 w-auto"
       />
     </li>
   </ul>
