style(cta): add cta after plans

--- a/src/components/idiomas/uk/plans.astro
+++ b/src/components/idiomas/uk/plans.astro
@@ -111,5 +111,13 @@ const PLANS: Plan[] = [
         ))
       }
     </ul>
+    <a
+      href="https://api.whatsapp.com/send?phone=573183795288&text=%C2%A1Hola!%20%C2%BFC%C3%B3mo%20est%C3%A1s%3F%20%F0%9F%98%84"
+      rel="noopener noreferrer"
+      target="_blank"
+      class="animate-blurred-fade-in animate-delay-150 bg-cpurple-200 hover:bg-cpurple-300 mx-auto inline-block w-fit px-8 py-3 text-sm font-semibold text-white transition min-sm:text-base"
+    >
+      Hablemos!
+    </a>
   </div>
 </section>
