chore(ui): replace queen by king

--- a/src/components/idiomas/uk/scroll-driven-animation.astro
+++ b/src/components/idiomas/uk/scroll-driven-animation.astro
@@ -8,7 +8,7 @@
         class="mx-auto text-center text-4xl leading-none font-black text-balance opacity-15 md:text-6xl lg:text-5xl xl:text-7xl"
         id="headline"
       >
-        God Save the Queen!
+        God Save the King!
       </h2>
       <p
         id="description"
