refactor: update alternative text for hero image

--- a/src/components/idiomas/australia/hero.astro
+++ b/src/components/idiomas/australia/hero.astro
@@ -11,7 +11,7 @@ import { Icon } from "astro-icon/components";
     <img
       class="absolute inset-0 mx-auto h-screen w-full object-cover object-top"
       src="/images/idiomas/australia/hero.webp"
-      alt="Estudia inglés en el Reino Unido con We Are TOP"
+      alt="Estudia inglés en Australia con We Are TOP"
       loading="eager"
     />
   </picture>
