chore: update texts replacing uk with australia

--- a/src/components/idiomas/australia/bento.astro
+++ b/src/components/idiomas/australia/bento.astro
@@ -1,12 +1,8 @@
----
-import Globe from "@/components/globe.astro";
----
-
 <article class="container py-12 md:py-24" id="bento">
   <h2
     class="mx-auto text-center text-4xl font-semibold tracking-tight text-balance text-gray-950 sm:text-5xl"
   >
-    ¿Por qué estudiar en el Reino Unido?
+    ¿Por qué estudiar en el Autralia?
   </h2>
 
   <ul class="mt-4 grid gap-4 sm:mt-16 lg:grid-cols-3 lg:grid-rows-2">
