--- a/src/components/idiomas/australia/plans.astro
+++ b/src/components/idiomas/australia/plans.astro
@@ -69,7 +69,7 @@ const PLANS: Plan[] = [
       <h2
         class="mx-auto max-w-3xl text-center text-2xl leading-tight font-black text-black md:text-3xl lg:text-4xl xl:max-w-5xl xl:text-5xl"
       >
-        los mejores programas para estudiar inglés y certificarte en Reino Unido
+        los mejores programas para estudiar inglés y certificarte en Australia
       </h2>
     </header>
     <ul class="container flex flex-wrap justify-center gap-5">
