--- a/src/components/idiomas/destinations.astro
+++ b/src/components/idiomas/destinations.astro
@@ -28,8 +28,8 @@ const LIST = {
     },
     {
       label: "Malta",
-      url: "https://content.wearetop.co/malta/",
-      external: true,
+      url: "/idiomas/malta",
+      external: false,
     },
     {
       label: "Ireland",
