fix: update spell

--- a/src/components/idiomas/australia/bento.astro
+++ b/src/components/idiomas/australia/bento.astro
@@ -2,7 +2,7 @@
   <h2
     class="mx-auto text-center text-4xl font-semibold tracking-tight text-balance text-gray-950 sm:text-5xl"
   >
-    ¿Por qué estudiar en el Autralia?
+    ¿Por qué estudiar en Australia?
   </h2>
 
   <ul class="mt-4 grid gap-4 sm:mt-16 lg:grid-cols-3 lg:grid-rows-2">
