fix(spell): fix spelling

--- a/src/components/home/bento.astro
+++ b/src/components/home/bento.astro
@@ -69,7 +69,7 @@ import { Icon } from "astro-icon/components";
         class="size-full object-cover object-center transition-transform duration-500 group-hover:scale-105"
       />
       <footer class="absolute right-6 bottom-6 left-6 z-10 text-white">
-        <h3 class="mb-1 text-lg font-semibold">Certificados y Dimplomados</h3>
+        <h3 class="mb-1 text-lg font-semibold">Certificados y Diplomados</h3>
         <p class="text-xs leading-5 sm:text-sm md:text-base">
           Lleva tus habilidades profesionales al siguiente nivel! Programas en
           Business, Hospitality, Digital Marketing ó IT, con la posibildiad de
