--- a/src/components/idiomas/malta/cities.astro
+++ b/src/components/idiomas/malta/cities.astro
@@ -7,7 +7,7 @@ const CITIES = ["St. Julian´s", "Gozo", "Sliema"];
     <h2
       class="mx-auto max-w-3xl text-2xl font-black md:text-3xl lg:text-4xl xl:max-w-5xl xl:text-5xl"
     >
-      Ahora que estás listo, estás son las ciudades donde podrás <strong
+      Ahora que estás listo, estas son las ciudades donde podrás <strong
         class="text-cpurple-200">estudiar en Malta</strong
       >:
     </h2>
